# small-vlm

./: .copier-answers.yml  .gitignore  .gitmodules  .markdownlint.yaml  AGENTS.md  Makefile  README.md  debug.ipynb  development.md  hh.ipynb  installation.md  prek.toml  publishing.md  pyproject.toml  tensor_data.txt  train.slurm  train8.slurm  train_h200.slurm  train_l40s.slurm
.basedpyright/: baseline.json
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
.history/: .gitignore_20250324105713
.history/conf/: config_20250324092629.yaml  config_20250324092708.yaml  config_20250324092731.yaml  config_20250324092759.yaml  config_20250324092804.yaml  config_20250324092937.yaml  config_20250324101221.yaml  config_20250324101659.yaml  config_20250324104039.yaml  config_20250324105242.yaml  config_20250324105252.yaml  config_20250324105550.yaml  config_20250324105600.yaml  config_20250324132622.yaml  config_20250324132631.yaml  config_20250324132804.yaml  config_20250324134107.yaml  config_20250324134157.yaml  config_20250324144248.yaml  config_20250324154830.yaml  config_20250324155805.yaml  config_20250324160211.yaml
.history/conf/logging/: hydra_rich_20250324132559.yaml  rich_20250324132319.yaml
.history/conf/model/: default_20250324100930.yaml  default_20250324100941.yaml  default_20250324101019.yaml  default_20250324101152.yaml  default_20250324102021.yaml  default_20250324130617.yaml  default_20250324131021.yaml  small-vlm_20250324144146.yaml  small-vlm_20250324144221.yaml
.history/src/vlm/: test_20250324104538.py  test_20250324104600.py  vlm_20250323235034.py  vlm_20250324085652.py  vlm_20250324085706.py  vlm_20250324085847.py  vlm_20250324085914.py  vlm_20250324085932.py  vlm_20250324090031.py  vlm_20250324090140.py  vlm_20250324090202.py  vlm_20250324090230.py  vlm_20250324090239.py  vlm_20250324090303.py  vlm_20250324090411.py  vlm_20250324090440.py  vlm_20250324090545.py  vlm_20250324090619.py  vlm_20250324091057.py  vlm_20250324091153.py  vlm_20250324091241.py  vlm_20250324091248.py  vlm_20250324091340.py  vlm_20250324091439.py  vlm_20250324091536.py  vlm_20250324091618.py  vlm_20250324091750.py  vlm_20250324091828.py  vlm_20250324091958.py  vlm_20250324092120.py  vlm_20250324092229.py  vlm_20250324100323.py  vlm_20250324100339.py  vlm_20250324100913.py  vlm_20250324100933.py  vlm_20250324101308.py  vlm_20250324103338.py  vlm_20250324104004.py  vlm_20250324104248.py  vlm_20250324104711.py  (+67 more)
.history/tests/: test_vlm_20250324102417.py  test_vlm_20250324102452.py  test_vlm_20250324102534.py  test_vlm_20250324102728.py  test_vlm_20250324102929.py  test_vlm_20250324103005.py  test_vlm_20250324103047.py
devtools/: INDEX.md  activation_patch.py  activation_patch.slurm  analysis_master.py  attn.slurm  auto_eval_watcher.sh  aux_fusion_full.py  aux_fusion_full.slurm  aux_fusion_full_summarize.py  aux_fusion_probe.py  aux_fusion_probe.slurm  aux_fusion_summarize.py  breen_caption_recipe_sweep.py  breen_caption_retest.py  breen_caption_test.py  breen_poll.slurm  breen_probe_common.py  breen_probe_data.py  breen_probe_feat.py  breen_probe_xshape.py  breen_smoke.py  breen_smoke.slurm  breen_train.slurm  bs16_probe.slurm  budget_probe.slurm  budget_probe_l40s.slurm  cka.slurm  cka_compute.py  cka_extract.py  cka_numbers.py  cka_nv.slurm  ckpt_sweep.py  ckpt_sweep.slurm  clip_smoke.slurm  collect_eval_results.py  compile_trial.slurm  diag_imgtok.py  diag_imgtok.slurm  distill_smoke.py  distill_smoke.slurm  (+99 more)
devtools/_archive/: encoderfree_figures.py  fig_division_of_labor.py  fusion_density_figure.py  neo_stage_figure.py  neo_variants_figure.py
docs/: code-review-confirmed-issues-2026-06-28.md  early-fusion-results-summary.md  native-ablation-running-results.md
docs/superpowers/plans/: 2026-06-03-audit-fixes.md  2026-06-06-visual-aux-loss.md  2026-06-10-early-fusion-access-arms.md  2026-06-16-p0-activation-patch-metric.md  2026-06-23-p1-new-models.md
docs/superpowers/specs/: 2026-06-05-aux-exit-loss-design.md  2026-06-06-visual-aux-loss-design.md  2026-06-10-early-fusion-access-arms.md  2026-06-14-native-vlm-capacity-readiness-design.md  2026-06-15-vlm-fusion-generalization-design.md  2026-06-18-claimB-internal-vision-encoder.md  2026-06-20-unified-vlm-design.md  2026-06-21-visual-distill-design.md
example/: test.json
neo_report/: CROSS_VALIDATION.md  ENCODER_FREE_FUSION_REPORT.md  FUSION_METRICS_EXPLAINED.md  FUSION_WINDOW_REANALYSIS.md  GENERALIZATION_RESULTS.md  INDEX.md  INTERNAL_ENCODER.md  METHODS_HOWTO.md  PAPER_ANALYSIS.md
neo_report/_archive/: REPORT.md
neo_report/_archive/old_data/: results_attn_mass.json  results_caption_chat.json  results_caption_knockout.json  results_caption_surgery.json  results_cka.json  results_gemma4.json  results_gemma4_sweep.json  results_knockout.json  results_real_vqa.json  results_real_vqa2.json  results_split.json  results_textonly_bypass.json  results_tier1_MT.json  results_tier1_PT.json  results_tier1_SFT.json  results_vision_bench_gemma4.json  results_vision_bench_neo.json  results_vqa_smoke_NEO1_0-2B-MT.jsonl  results_vqa_smoke_NEO1_0-2B-PT-fixed.jsonl  results_vqa_smoke_NEO1_0-2B-SFT.jsonl
src/vlm/: __init__.py  vlm.py
src/vlm/config/: __init__.py  config.yaml  config_schema.py  exp-encabl-clip-s1.yaml  exp-encabl-clip-s2.yaml  exp-encabl-e1-nepa-s1.yaml  exp-encabl-e1-nepa-s2.yaml  (+88 more)
templates/: configuration_vlm.py.j2  modeling_vlm.py.j2  processing_vlm.py.j2
tests/: model_output.py  test_caption_token_dropout.py  test_config_validation.py  test_data_transform.py  test_dataset_multimodal.py  test_effective_sample_length_breen.py  test_energon_skip_corrupt.py  test_energon_wds.py  test_gen_diffusion.py  test_gen_image.py  test_gen_mask.py  test_gen_rope.py  test_image_position.py  test_image_tokenizer_cache.py  test_inference.py  test_media_position_parity.py  test_media_token_marker.py  test_model_bugfixes_t3.py  test_raw_image_processor.py  test_set_trainable_unfreeze.py  test_strip_empty_think.py  test_visual_aux_pairs.py  test_visual_distill_anticollapse.py  test_visual_experts.py  test_xmodal_mask.py
(+141 files in other folders)
