# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/leo1oel/small-vlm"
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "small-vlm"
description = "small vlm for training and experiments"
authors = [{ name = "Yiming Liu", email = "liuym23@mails.tsinghua.edu.cn" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

# https://pypi.org/classifiers/
# Adjust as needed:
classifiers = [
    # Adjust as needed:
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    # Include this to avoid accidentally publishing to PyPI:
    # "Private :: Do Not Upload",
]


# ---- Main dependencies ----

dependencies = [
    "accelerate>=1.13",
    "blobfile",
    "datasets>=4.8",
    "deepspeed>=0.19",
    "hydra-core",
    "kernels>=0.12,<0.13",
    "libcst",
    "pillow",
    "protobuf",
    "rich",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "tiktoken>=0.9.0",
    "torch>=2.9",
    "torchaudio>=2.11.0",
    "torchvision",
    "transformers==5.10.1",
    "wandb",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest",
    "pytest-sugar",
    "ruff",
    "codespell",
    "rich",
    "basedpyright",
    "funlog",
    "ipykernel",
    "ipywidgets>=8.1.7",
]
# Cluster / streaming training env: Azure streaming (dataset.type="energon")
# plus fused attention. flash-attn is a prebuilt wheel pinned to the cluster
# stack (linux, CPython 3.13, torch 2.12+cu130) — other platforms skip it via
# the marker, so local (macOS) `uv sync` keeps working.
# NOTE: bump the flash-attn URL below together with any torch/CUDA upgrade —
# an ABI mismatch only surfaces at import time, not at lock time. Wheels:
# https://github.com/mjun0812/flash-attention-prebuild-wheels
cluster = [
    "megatron-energon[azure-storage-blob]",
    "multi-storage-client[azure-storage-blob]",
    "flash-attn; sys_platform == 'linux' and python_full_version >= '3.13' and python_full_version < '3.14'",
]

[tool.uv]
default-groups = ["dev", "cluster"]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.17/flash_attn-2.8.3%2Bcu130torch2.12-cp313-cp313-linux_x86_64.whl" }
# PyPI 7.3.2 lacks the filesystem+msc:// aux protocol our energon_dataset uses;
# it landed on the develop branch (pinned to a known-good commit, 2026-05-28).
megatron-energon = { git = "https://github.com/NVIDIA/Megatron-Energon", rev = "4a1d360dc84773aa5008cb27326fa87e3155c97b" }

[project.scripts]
# Add script entry points here:
small-vlm = "vlm:main_cli"
push-to-hub = "vlm:push_to_hub"


# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/vlm"]


# ---- Settings ----

[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    # Other possibilities:
    # "D" # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "Q" # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    # "COM" # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim

]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117",   # https://docs.astral.sh/ruff/rules/over-indented/
    "D206",   # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300",   # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000",   # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001",   # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002",   # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003",   # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.per-file-ignores]
# devtools/ holds research, figure, and probe scripts that are not shipped with the
# package. They carry pre-existing lint debt (loop-variable closures, ambiguous
# single-letter math names, %-formatting, etc.) that is intentionally tolerated there.
# The BREEN feature code under src/ and the test suite under tests/ stay fully linted.
"devtools/**" = [
    "B007", # unused loop control variable
    "B023", # function uses loop variable (late-binding closure)
    "B905", # zip() without explicit strict=
    "E741", # ambiguous variable name (l/I/O)
    "F841", # local variable assigned but never used
    "UP031", # printf-style string formatting
    "UP038", # isinstance((X, Y)) instead of X | Y (not auto-fixable without --unsafe-fixes)
]

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["src", "tests", "devtools"]
# devtools/ holds research, figure, and probe scripts that are not shipped with the
# package (same rationale as the ruff `devtools/**` per-file-ignores below). They carry
# pre-existing type-checking debt — unresolved research-only imports (lpips, diffusers,
# sklearn, ...), implicit relative imports, and constant redefinitions — that is
# intentionally tolerated there. The shipped code under src/ and the tests under tests/
# stay type-checked.
exclude = ["devtools", "**/node_modules", "**/__pycache__", "**/.venv"]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
reportPrivateImportUsage = false
# basedpyright-only sibling of reportPrivateImportUsage: warns when a first-party
# module re-imports a symbol that the source module does not list in __all__. The
# data layer deliberately re-exports megatron-energon helpers through
# vlm.data.energon_dataset, so silence the local variant the same way.
reportPrivateLocalImportUsage = false
reportOperatorIssue = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportMissingTypeArgument = false
reportUnknownParameterType = false
reportArgumentType = false
reportCallIssue = false
reportIndexIssue = false
reportIncompatibleMethodOverride = false
reportUnsupportedDunderAll = false
reportOptionalMemberAccess = false
reportUnusedParameter = false
# The Optional-narrowing family: the shipped model code threads Optional tensors
# (distill_images/positions, input_ids, block-id buffers, conditionally-built
# projection heads) through logical guards the type checker cannot follow. Keep
# these off alongside the already-disabled reportOptionalMemberAccess so the same
# pattern is tolerated whether the Optional is accessed, indexed, called, or iterated.
reportOptionalSubscript = false
reportOptionalCall = false
reportOptionalIterable = false
# Strict assignment/override/cycle checks in the same noisy family as the
# already-disabled reportArgumentType / reportCallIssue / reportIncompatibleMethodOverride:
# a None-reassignment of an int-typed local, a megatron-energon TaskEncoder subclass that
# narrows `cookers`, and the package<->module re-export cycle in models/__init__.py.
reportAssignmentType = false
reportIncompatibleVariableOverride = false
reportImportCycles = false
# Remaining strict warning-level rules across src/tests. BasedPyright's CLI exits
# non-zero whenever any warnings remain (even at `--level error`), so the lint gate
# fails on these annotation/style findings. Tolerated as baseline (same rationale
# as the rules above): unannotated params/attributes/lambdas, implicit overrides,
# untyped base classes, the package using its own "private" members, and incidental
# unused/unnecessary nits.
reportMissingParameterType = false
reportUnannotatedClassAttribute = false
reportUnknownLambdaType = false
reportImplicitOverride = false
reportUntypedBaseClass = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false


[tool.codespell]
# devtools/lint.py runs `codespell --write-changes`, so any flagged word would be
# rewritten in place. The entries below are real identifiers / domain abbreviations in
# the research scripts and tests (e.g. `ans`=answer tokens, `te`=train/test split,
# `nd`=num-depths, `mot`=mixture-of-transformers, `arange`=torch.arange) that codespell
# would otherwise "correct" (ans->and, nd->And, ...) and corrupt. Case-insensitive.
ignore-words-list = "afile,ans,arange,ist,mot,nd,oce,strat,te"
# skip = "foo.py,bar.py"

[tool.typos.default.extend-words]
# crate-ci/typos (the `typos` pre-commit hook) flags these research-script identifiers
# and sub-word fragments as misspellings. They are intentional: `oce`/`pn`/`ist`/`Nd`
# are local variables, `consol` is part of `rho_consol`, `strat` of `neo_strat`, and
# `PN` of `PNGs`. Map each to itself so typos leaves them (and real identifiers) intact.
# `arange` is `torch.arange`: typos reads it as plain text in templates/*.j2 (and would
# "correct" it to `arrange`, breaking the exported model — see tests/test_inference.py).
# `mis` is the prefix typos splits off `mis-splice`/`mis-trained`/`mis-assignment` in the
# energon data-path comments.
# `meaned` is part of `de-meaned`/`DE-MEANED` (mean-subtracted) in the anti-collapse
# distill comments; typos would "correct" it to `meant`.
oce = "oce"
Nd = "Nd"
pn = "pn"
strat = "strat"
ist = "ist"
consol = "consol"
PN = "PN"
arange = "arange"
mis = "mis"
meaned = "meaned"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["src", "tests"]
# testpaths includes `src` to import-smoke-test every shipped module. The lmms-eval
# benchmark adapter is the one module that hard-requires an optional dependency
# (lmms-eval, not in the default/dev/cluster groups) and raises ImportError at import
# time, so it must be skipped during collection.
addopts = "--ignore=src/vlm/inference/lmms_eval.py"
norecursedirs = []
filterwarnings = []
